2003-11-08  Braden McDaniel  <braden@endoframe.com>

	Removed node::render in favor of render_* member functions on the
	derived abstract node types.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/script.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2003-11-08  Braden McDaniel  <braden@endoframe.com>

	* src/lookat/Makefile.am:  Removed lingering obsolete reference
	to JNI_CFLAGS.

2003-11-07  Braden McDaniel  <braden@endoframe.com>

	Enabled build of Script node Java binding by default.

	* configure.ac:  Changed OV_WITH_JDK to OV_CHECK_JNI.
	* openvrml.spec.in:  Now requires libgcj >= 3.3.
	* m4/jdk.m4:  Replaced OV_WITH_JDK with OV_CHECK_JNI.
	* src/libopenvrml/openvrml/Makefile.am:  JNI_CFLAGS autoconf
	substitution no longer used.

2003-11-04  Braden McDaniel  <braden@endoframe.com>

	Added some more tests.

	* test/Makefile.am
	* test/browser-create_vrml_from_stream.cpp
	* test/parse-anchor.cpp

2003-11-03  Braden McDaniel  <braden@endoframe.com>

	* openvrml.spec.in:  Removed lookat-bin from lookat package.
	Added mozilla requirement for lookat.  lookat is now built with
	-rpath for the Mozilla library directory; so the binary package
	requires the same Mozilla version it was built against.

2003-11-03  Braden McDaniel  <braden@endoframe.com>

	Build executables with -rpath instead of setting
	LD_LIBRARY_PATH.

	* configure.ac
	* src/lookat/Makefile.am
	* src/lookat/lookat.in:  Removed file.
	* test/Makefile.am

2003-11-02  Braden McDaniel  <braden@endoframe.com>

	Removed viewer::scale_texture.  Instead, do any texture
	rescaling in the implementation of viewer::insert_texture.

	* src/libopenvrml/openvrml/img.cpp
	* src/libopenvrml/openvrml/img.h
	* src/libopenvrml/openvrml/viewer.cpp
	* src/libopenvrml/openvrml/viewer.h
	* src/libopenvrml/openvrml/vrml97node.cpp