@@ -55,9 +55,6 @@ namespace openvrml {
         size_t nframes() const;
         const unsigned char * pixels() const;
         const unsigned char * pixels(size_t frame) const;
-# if 0
-        void resize(size_t w, size_t h);
-# endif
     };
 
     inline size_t img::w() const
@@ -84,14 +81,6 @@ namespace openvrml {
     {
         return this->pixels_;
     }
-
-# if 0
-    inline void img::resize(const size_t w, const size_t h)
-    {
-        this->w_ = w;
-        this->h_ = h;
-    }
-# endif
 }
 
 # endif // OPENVRML_IMG_H
