@@ -1,3 +1,11 @@
+2003-11-11  Braden McDaniel  <braden@endoframe.com>
+
+	Cruft removal.
+
+	* src/libopenvrml/openvrml/img.h
+	* src/libopenvrml/openvrml/vrml97node.cpp
+	* src/libopenvrml/openvrml/vrml97node.h
+
 2003-11-08  Braden McDaniel  <braden@endoframe.com>
 
 	Removed node::render in favor of render_* member functions on the
